@@ -1,3 +1,8 @@
+2011-07-20  Marco Randazzo    <marco.randazzo@iit.it>
+
+	* src/libYARP_dev/src/ServerControlBoard.cpp
+	added getTorque() / getTorques() in YARP ServerControlBoard.
+	
 2011-07-20  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/libYARP_dev/src/TestFrameGrabber.cpp: simplify testing
